--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,19 +1,43 @@
+* {
+  box-sizing: border-box;
+}
+
+.header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  color: white;
+  background-image: url("../../assets/header_image.jpg");
+  background-position: center;
+  background-size: cover;
+  height: 400px;
+  .heading{
+    padding-top: 75px;
+    font-weight: bold;
+    text-align: center;
+    font-size: 56px;
+  }
+}
+
 .mainContainer{
     width:80%;
     margin:48px auto;
 }
 
-.heading{
-  padding-top: 75px;
-  font-weight: bold;
+.instruction {
   text-align: center;
-  font-size: 56px;
+  font-size: 20px;
 }
 
 .submitBtn_wrapper{
   display: flex;
   justify-content: center;
-  margin: 32px auto;
+  margin: 48px auto;
+  .submitButton {
+    font-size: 20px;
+    letter-spacing: 0.2rem;
+  }
 }
 
 .btn{
@@ -80,8 +104,9 @@
     }
 
     .card-image img {
-      width: 100%;
-      height: auto;
+      width: 300px;
+      height: 300px;
+      object-fit: cover;
     }
 
     .title {
