--- a/src/app/lost-edit/lost-edit.component.html
+++ b/src/app/lost-edit/lost-edit.component.html
@@ -24,7 +24,7 @@
         <input
           name="itemName"
           #itemName_="ngModel"
-          [(ngModel)]="itemName"
+          [(ngModel)]="title"
           id="itemName"
           type="text"
           class="form-control"
@@ -133,7 +133,7 @@
         <input
           name="name"
           #name_="ngModel"
-          [(ngModel)]="name"
+          [(ngModel)]="title"
           id="name"
           type="text"
           class="form-control"
@@ -178,7 +178,7 @@
         <input
           name="phoneNumber"
           #phoneNumber_="ngModel"
-          [(ngModel)]="phoneNumber"
+          [(ngModel)]="phonenumber"
           id="phoneNumber"
           type="tel"
           class="form-control"
