--- a/src/app/lost-edit/lost-edit.component.html
+++ b/src/app/lost-edit/lost-edit.component.html
@@ -148,14 +148,14 @@
           required
           minlength="1"
         />
-        <div
+        <!-- <div
         class="alert"
         role="alert"
         *ngIf="contact_name_.touched && contact_name_.invalid"
       >
         Please enter
       </div>
-      </div>
+      </div> -->
 
 
       <!-- Email-->
