--- a/src/app/lost-edit/lost-edit.component.html
+++ b/src/app/lost-edit/lost-edit.component.html
@@ -196,7 +196,7 @@
       </div>
 
       <div class="wrap box btn-box">
-        <button type="submit" class="btn btn-primary half" [disabled]="form.invalid">
+        <button type="submit" class="btn btn-primary half">
           Edit
         </button>
         <div class="mt-3" [hidden]="formMessageHidden">Success!</div>
