--- a/src/app/lost-edit/lost-edit.component.html
+++ b/src/app/lost-edit/lost-edit.component.html
@@ -1,14 +1,20 @@
 <app-top-header></app-top-header>
 <div class="post-wrap wrap">
+
   <div class="container">
-    <h1 class="form-title">Edit Item</h1>
-    <form class="form-container" #form="ngForm" (ngSubmit)="submit()">
+    <h1 class="form-title">Lost Item</h1>
+    <form
+      class="form-container"
+      enctype="multipart/form-data"
+      #form="ngForm"
+      (ngSubmit)="submit()"
+    >
       <!-- Item Name -->
       <div class="mb-2 box half">
-        <label for="title" class="form-label">Item Name</label>
+        <label for="itemName" class="form-label">Item Name</label>
         <input
           name="title"
-          #title_="ngModel"
+          #itemNanme="ngModel"
           [(ngModel)]="title"
           id="title"
           type="text"
@@ -19,12 +25,12 @@
         <div
         class="alert"
         role="alert"
-        *ngIf="title_.touched && title_.invalid"
+        *ngIf="itemNanme.touched && itemNanme.invalid"
       >
         Please enter item name.
       </div>
-      </div>
 
+      </div>
 
       <!-- Location -->
       <div class="mb-2 box half">
@@ -46,38 +52,31 @@
       >
         Please enter
       </div>
+
       </div>
 
-
       <!-- Date -->
-      <div class="mb-3 box half">
-        <label for="date_found" class="form-label">Date Found</label>
+      <div class="mb-2 box half">
+        <label for="date" class="form-label">Date Found</label>
         <input
           name="date_found"
-          #date_found_="ngModel"
+          #date_="ngModel"
           [(ngModel)]="date_found"
-          id="date_found"
+          id="date"
           type="date"
           class="form-control"
           required
         />
-        <div
-        class="alert"
-        role="alert"
-        *ngIf="date_found_.touched && date_found_.invalid"
-      >
-        Please enter
+        <div class="alert" role="alert" *ngIf="date_.touched && date_.invalid">
+          Please enter
+        </div>  
       </div>
-      </div>
-
-
+ 
       <!-- image -->
       <div class="mb-2 box full">
         <label for="description" class="form-label">Image </label>
 
         <input
-          name="iamge"
-          #image_="ngModel"
           [(ngModel)]="image"
           type="file"
           (change)="trackFile($event)"
@@ -85,14 +84,17 @@
           id="imageUrl"
           name="image"
         />
-        <!-- <div
-              class="alert alert-danger"
-              role="alert"
-              *ngIf="image.touched && image.invalid"
-            >
-              Please enter
-            </div> -->
+
+        <img [src]="imageUrl" class="mt-3" width="100" height="100">
+             <!-- <div
+        class="alert alert-danger"
+        role="alert"
+        *ngIf="image.touched && image.invalid"
+      >
+        Please enter
+      </div> -->
       </div>
+ 
 
       <!-- Desc -->
       <div class="mb-2 box full">
@@ -117,6 +119,28 @@
       </div>
 
 
+      <!-- Image -->
+      <!-- <div class="mb-3">
+        <label for="iamge" class="form-label">Item Image URL <span class="required-label">*Required</span></label>
+        <input
+          name="image"
+          #image_="ngModel"
+          [(ngModel)]="image"
+          id="iamge"
+          type="text"
+          class="form-control"
+          required
+          minlength="1"
+        />
+      </div> -->
+      <!-- <div
+        class="alert alert-danger"
+        role="alert"
+        *ngIf="image_.touched && image_.invalid"
+      >
+        Please enter
+      </div> -->
+
       <!-- Indentifying question -->
 
       <div class="mb-2 box full">
@@ -132,30 +156,35 @@
           class="form-control"
         ></textarea>
       </div>
+      <!-- <div
+        class="alert alert-danger"
+        role="alert"
+        *ngIf="identifying_question_.touched && identifying_question_.invalid"
+      >
+        Please enter
+      </div> -->
 
-      <!-- Name -->
+      <!-- Contact name -->
+
       <div class="mb-2 box half">
-        <label for="contact_name" class="form-label">Finder Name</label>
+        <label for="contact_name" class="form-label"> Contact Name </label>
         <input
-
-          name="name"
-          #name_="ngModel"
-          [(ngModel)]="title"
-          id="name"
-
+          name="contact_name"
+          #contact_name_="ngModel"
+          [(ngModel)]="contact_name"
+          id="contact_name"
           type="text"
           class="form-control"
           required
-          minlength="1"
         />
-        <!-- <div
+        <div
         class="alert"
         role="alert"
         *ngIf="contact_name_.touched && contact_name_.invalid"
       >
         Please enter
       </div>
-      </div> -->
+      </div>
 
 
       <!-- Email-->
@@ -172,34 +201,34 @@
           minlength="1"
           pattern="^[^s@]+@[^s@]+.[^s@]{2,}$"
         />
-        <div
-        class="alert"
-        role="alert"
-        *ngIf="email_.touched && email_.invalid"
-      >
-        Please enter
-      </div>
+        <div class="alert" role="alert" *ngIf="email_.touched && email_.invalid">
+          Please enter
+        </div>
       </div>
 
 
       <!-- Phone Number-->
       <div class="mb-2 box half">
-        <label for="phonenumber" class="form-label">Finder Phone Number </label>
+        <label for="phoneNumber" class="form-label">Finder Phone Number </label>
         <input
-          name="phonenumber"
-          #phonenumber_="ngModel"
+          name="phoneNumber"
+          #phoneNumber_="ngModel"
           [(ngModel)]="phonenumber"
-          id="phonenumber"
+          id="phoneNumber"
           type="tel"
           class="form-control"
+          required
         />
       </div>
 
       <div class="wrap box btn-box">
         <button type="submit" class="btn btn-primary half">
-          Edit
+          SUBMIT
         </button>
-        <div class="mt-3" [hidden]="formMessageHidden">Success!</div>
+        <!-- | <a routerLink="/">Back to Home</a> -->
+        <!-- <div class="mt-3" [hidden]="formMessageHidden">
+          Success!
+        </div> -->
       </div>
     </form>
   </div>
