--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -11,7 +11,7 @@
   <section class="listContainer" *ngFor="let post of posts; let i = index"><!--ngfor loop-->
     <div #listcontainer class="itemCard"><!--conditional class lost or found?-->
       <div class="row">
-        <div class="col-6">
+        <div class="col-lg-6">
           <div class="itemInfo" (click)="getDescription(description)">
             <div>
               <div class="itemName">{{post.title}}</div>
@@ -24,7 +24,7 @@
             </div>
           </div>
         </div>
-        <div class="col-6">
+        <div class="col-lg-6">
           <div class="card-image">
             <img
               [src]="post.image"
