Updated edit page for image display

--- a/src/app/lost-edit/lost-edit.component.scss
+++ b/src/app/lost-edit/lost-edit.component.scss
@@ -82,6 +82,49 @@ label{
   box-shadow: 5px 5px #888888;
 }
 
+.imgBox{
+  p{
+    font-size: .8rem;
+    color: #4d4d4d;
+  }
+}
+.arrowBox{
+  padding: 0px 60px 0 40px;
+}
+.arrow{
+  position: relative;
+  display: inline-block;
+  padding: 0 0 0 16px;
+  color: #000;
+  vertical-align: middle;
+  text-decoration: none;
+  font-size: 15px;
+}
+.arrow::before,
+.arrow::after{
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  margin: auto;
+  content: "";
+  vertical-align: middle;
+}
+.sample1-1::before{
+  left: 4px;
+  width: 25px;
+  height: 2px;
+  background: #1477EC;
+}
+.sample1-1::after{
+  left: 23px;
+  width: 7px;
+  height: 7px;
+  border-top: 2px solid #1477EC;
+  border-right: 2px solid #1477EC;
+  -webkit-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
 
 @media screen and (max-width: 768px) {
   .post-wrap {
