--- a/src/app/lost-edit/lost-edit.component.html
+++ b/src/app/lost-edit/lost-edit.component.html
@@ -85,8 +85,20 @@
           name="image"
         />
 
-        <img [src]="imageUrl" class="mt-3" width="100" height="100">
-             <!-- <div
+        <div class="d-flex d-flex align-items-center">
+        <div class="imgBox"> 
+          <img [src]="imageUrl" class="mt-3" width="100" height="100"> 
+          <p>Before</p>
+        </div>
+        <div class="arrowBox" *ngIf="show">  
+          <span href="#" class="arrow sample1-1"></span> 
+        </div>
+        <div class="imgBox" *ngIf="show"> 
+          <img [src]="imgSrc" class="mt-3" width="100" height="100"> 
+          <p>After</p>
+        </div>
+        </div>
+        <!-- <div
         class="alert alert-danger"
         role="alert"
         *ngIf="image.touched && image.invalid"
